--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
           <div class="section-title text-center">
             <h1>About Me</h1>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores dicta assumenda iste odit saepe dolor
-              ipsa, ipsam facilis ab cum.
+              I'am BIMA RIZKI i'am<br/>Hello everyone, thanks for visiting me. I am a fullstack web and app Developer
             </p>
             <div class="line"></div>
           </div>
@@ -86,7 +85,7 @@
                 <p>
                   i am a frontend web developer, i can create a beautiful and responsive website.
                 </p>
-                <a href="#" class="about-link btn btn-sm btn-brand">
+                <a href="#project" class="about-link btn btn-sm btn-brand">
                   <span>Read more</span>
                 </a>
               </div>
@@ -147,8 +146,7 @@
               <div class="section-title text-center">
                 <h1>My Project</h1>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores dicta assumenda iste odit saepe
-                  dolor ipsa, ipsam facilis ab cum.
+                  this is all my project you all can check it below
                 </p>
                 <div class="line"></div>
               </div>
@@ -236,30 +234,13 @@
           <div class="section-title text-center">
             <h1>Contact Me</h1>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores dicta assumenda iste odit saepe dolor
-              ipsa, ipsam facilis ab cum.
+              please contact if you wanna to hire me or etc in discuss below.
             </p>
             <div class="line"></div>
           </div>
         </div>
       </div>
     </div>
-
-    <div class="col-lg-3 col-md-4 col-sm-6">
-      <div class="wat py-5 px-4 border">
-        <div class="about-icon">
-          <i class="ri-quill-pen-fill"></i>
-        </div>
-        <h5 class="mt-4">Writer</h5>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, quas.
-        </p>
-        <a href="#" class="about-link btn btn-sm btn-brand">
-          <span>Read more</span>
-        </a>
-      </div>
-    </div>
-  </section>
 
   <section id="contact">
     <h2>Kontak Kami</h2>
@@ -280,5 +261,4 @@
   <script src="script.js"></script>
 
 </body>
-
 </html>
