--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
           <div class="section-title text-center">
             <h1>About Me</h1>
             <p>
-              I'am BIMA RIZKI i'am<br/>Hello everyone, thanks for visiting me. I am a fullstack web and app Developer
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores dicta assumenda iste odit saepe dolor
+              ipsa, ipsam facilis ab cum.
             </p>
             <div class="line"></div>
           </div>
@@ -85,7 +86,7 @@
                 <p>
                   i am a frontend web developer, i can create a beautiful and responsive website.
                 </p>
-                <a href="#project" class="about-link btn btn-sm btn-brand">
+                <a href="#" class="about-link btn btn-sm btn-brand">
                   <span>Read more</span>
                 </a>
               </div>
@@ -146,7 +147,8 @@
               <div class="section-title text-center">
                 <h1>My Project</h1>
                 <p>
-                  this is all my project you all can check it below
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores dicta assumenda iste odit saepe
+                  dolor ipsa, ipsam facilis ab cum.
                 </p>
                 <div class="line"></div>
               </div>
@@ -221,8 +223,7 @@
 
 
         </div>
-
-    </div>
+        </section>
 
     </div>
   </section>
@@ -234,13 +235,15 @@
           <div class="section-title text-center">
             <h1>Contact Me</h1>
             <p>
-              please contact if you wanna to hire me or etc in discuss below.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores dicta assumenda iste odit saepe dolor
+              ipsa, ipsam facilis ab cum.
             </p>
             <div class="line"></div>
           </div>
         </div>
       </div>
     </div>
+  </section>
 
   <section id="contact">
     <h2>Kontak Kami</h2>
@@ -261,4 +264,5 @@
   <script src="script.js"></script>
 
 </body>
+
 </html>
